# airlines-booking

./: airline-sample-data.sql  airline-schema.sql  booking_demo.py  docker-compose.yml  employees.sql  flake.nix  pyproject.toml  queries.sql
